# remote-access-app-fw

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  app-streaming-fw.sln  copy_assets.bat  runClient.bat  runServer.bat  setup.bat
BFE-Core/: BFE-Core.vcxproj  BFE-Core.vcxproj.filters  BFE_buffer.cpp  BFE_buffer.hpp  BFE_camera.hpp  BFE_descriptors.cpp  BFE_descriptors.hpp  BFE_device.cpp  BFE_device.hpp  BFE_device_base.cpp  BFE_device_hs.hpp  BFE_image.cpp  BFE_image.hpp  BFE_model.cpp  BFE_model.hpp  BFE_pipeline.cpp  BFE_pipeline.hpp  BFE_render_system.cpp  BFE_render_system.hpp  BFE_renderer.cpp  BFE_renderer.hpp  BFE_renderer_base.hpp  BFE_swap_chain.cpp  BFE_swap_chain.hpp  BFE_texture.cpp  BFE_texture.hpp  BFE_utils.h  BFE_window.cpp  BFE_window.hpp  BFE_window_base.hpp  BFE_window_hs.hpp
BFE-Headless/: BFE-Headless.vcxproj  BFE-Headless.vcxproj.filters  BFE_device_hs.cpp  BFE_renderer_hs.hpp
BFEngine/: BFEngine.vcxproj  BFEngine.vcxproj.filters  app.cpp  app.hpp  keyboard_test.cpp  keyboard_test.hpp  keyboard_text.cpp  main.cpp
StreamingClient/: StreamingClient.cpp  StreamingClient.vcxproj  StreamingClient.vcxproj.filters  decompressionMod.cpp  decompressionMod.hpp  displayMod.cpp  displayMod.hpp  frame.hpp  main.cpp  networkMod.cpp  networkMod.hpp  streamingClient.hpp
StreamingServer/: StreamingServer.cpp  StreamingServer.hpp  StreamingServer.vcxproj  StreamingServer.vcxproj.filters
assets/models/: plane.mtl  src.txt
assets/shaders/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
cmake/: Findglfw3.cmake
libs/: consts.hpp  frame.hpp
setup/: _start_both.bat  client.bat  start.bat
src/BFE-Core/: BFE_camera.cpp  BFE_camera.hpp  BFE_device.cpp  BFE_device.hpp  BFE_device_base.cpp  BFE_device_base.hpp  BFE_frame_info.hpp  BFE_gameobject.hpp  BFE_image.cpp  BFE_image.hpp  BFE_model.cpp  BFE_pipeline.cpp  BFE_render_system.cpp  BFE_render_system.hpp  BFE_renderer.cpp  BFE_renderer_base.cpp  BFE_renderer_base.hpp  BFE_swap_chain.hpp  BFE_swap_chain_hs.hpp  BFE_texture.cpp  BFE_window.cpp  BFE_window.hpp  CMakeLists.txt
src/BFE-Headless/: BFE_device_hs.cpp  BFE_device_hs.hpp  BFE_renderer_hs.cpp  BFE_renderer_hs.hpp  BFE_window_hs.cpp  BFE_window_hs.hpp  CMakeLists.txt
src/BFEngine/: CMakeLists.txt  app.cpp  app.hpp  keyboard_test.hpp  main.cpp
src/RAC-Core/: CMakeLists.txt  RAC_buffer.cpp  RAC_buffer.hpp  RAC_camera.cpp  RAC_camera.hpp  RAC_descriptors.cpp  RAC_descriptors.hpp  RAC_device.cpp  RAC_device.hpp  RAC_device_base.cpp  RAC_device_base.hpp  RAC_frame_info.hpp  RAC_gameobject.hpp  RAC_image.cpp  RAC_image.hpp  RAC_model.cpp  RAC_model.hpp  RAC_pipeline.cpp  RAC_pipeline.hpp  RAC_render_system.cpp  RAC_render_system.hpp  RAC_renderer.cpp  RAC_renderer.hpp  RAC_renderer_base.cpp  RAC_renderer_base.hpp  RAC_swap_chain.cpp  RAC_swap_chain.hpp  RAC_texture.cpp  RAC_texture.hpp  RAC_utils.h  RAC_window.cpp  RAC_window.hpp  RAC_window_base.hpp
src/RAC-Headless/: CMakeLists.txt  RAC_device_hs.cpp  RAC_device_hs.hpp  RAC_renderer_hs.cpp  RAC_renderer_hs.hpp  RAC_window_hs.cpp  RAC_window_hs.hpp
src/RemoteClient/: CMakeLists.txt  RemoteClient.cpp  RemoteClient.hpp  decompressionMod.cpp  decompressionMod.hpp  displayMod.cpp  displayMod.hpp  inputEvents.hpp  main.cpp  networkMod.cpp  networkMod.hpp
src/RemoteServer/: CMakeLists.txt  KeyboardCameraController.cpp  KeyboardCameraController.hpp  MouseCameraController.cpp  MouseCameraController.hpp  MyApplication.cpp  MyApplication.hpp  RemoteApplication.hpp  compressionMod.hpp  inputEvents.hpp  main.cpp  networkMod.cpp  networkMod.hpp
src/StreamingClient/: CMakeLists.txt  StreamingClient.cpp  decompressionMod.cpp  decompressionMod.hpp  displayMod.cpp  displayMod.hpp  inputEvents.hpp  main.cpp  networkMod.cpp  networkMod.hpp  streamingClient.hpp
src/StreamingServer/: CMakeLists.txt  KeyboardCameraController.cpp  KeyboardCameraController.hpp  MouseCameraController.cpp  MouseCameraController.hpp  MyApplication.cpp  MyApplication.hpp  RemoteApplication.hpp  StreamingServer.cpp  StreamingServer.hpp  inputEvents.hpp  networkMod.cpp  networkMod.hpp
